# TgQuickReply

./: .gitignore  README.md  TgQuickReply.py  pyproject.toml  running.py
